--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <meta http-equiv="refresh" content="0; url='https://rdweb.wvd.microsoft.com/arm/webclient'">
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+  <p>Please follow <a href="https://rdweb.wvd.microsoft.com/arm/webclient">this link</a>.</p>
 </body>
-
 </html>
