--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
   <meta http-equiv="refresh" content="0; url='https://rdweb.wvd.microsoft.com/arm/webclient'">
 </head>
 <body>
-  <p>Please follow <a href="https://rdweb.wvd.microsoft.com/arm/webclient">this link</a>.</p>
+  <p>You are being transferred to <a href="https://rdweb.wvd.microsoft.com/arm/webclient"></a>.</p>
 </body>
 </html>
