updated AVD service url

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url='https://rdweb.wvd.microsoft.com/arm/webclient'">
+  <meta http-equiv="refresh" content="0; url='https://client.wvd.microsoft.com/arm/webclient/index.html'">
 </head>
 <body>
-  <p> You are being transferred to Azure Virtual Desktop Service<a href="https://rdweb.wvd.microsoft.com/arm/webclient"></a>.</p>
+  <p> You are being transferred to Azure Virtual Desktop Service<a href="https://client.wvd.microsoft.com/arm/webclient/index.html"></a>.</p>
 </body>
 </html>
